syntax = "proto3";

package auth;

option go_package = "auth-service/proto;pb";

service AuthService {
    rpc Register(RegisterRequest) returns (AuthResponse);
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    rpc Recover(RecoverRequest) returns (RecoverResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    bool valid = 1;
}

message RecoverRequest {
    string email = 1;
}

message RecoverResponse {
    string token = 1;
}
