syntax = "proto3";

package auth;

option go_package = "./pb";

service AuthService {
  rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);
  rpc VerifyToken(TokenRequest) returns (TokenResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse); //Not working
  rpc ChangeUserPassword(ChangeUserPasswordRequest) returns (ChangeUserPasswordResponse); //Not working
  // rpc ReactivateUser(ReactivateUserRequest) returns (ReactivateUserResponse); Moved to gqlgen
  // rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse); Moved to gqlgen
}

message GetUserRoleRequest {
  string email = 1;
}

message GetUserRoleResponse {
  string role = 1;
  string message = 2;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string id = 1;
  string email = 2;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message ChangeUserPasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangeUserPasswordResponse {
  string message = 1;
}